--- a/_posts/2020-02-19-rna.markdown
+++ b/_posts/2020-02-19-rna.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Abiogenesis: The RNA World Hypothesis"
-tags: [Evolution]
+tags: [Evolution, Biology]
 date:   2020-02-19 01:44:08 -0700
 categories: blog post
 ---
