--- a/_posts/2020-02-19-rna.markdown
+++ b/_posts/2020-02-19-rna.markdown
@@ -21,14 +21,14 @@ While the backbone part of a nucleotide can bind to any other nucleotide’s bac
 ### Ribozymes
 But that’s not life, that’s chemistry!  Since any RNA strand can, in the right conditions, form a copy of itself, there’s no way for one strand to be a better replicator than another, and thus natural selection won’t work.  How do we get from simple chemistry to competition and natural selection?
 
-Here’s where it becomes important that RNA is naturally just a single strand.  When there aren’t many free single nucleotides around, a strand of RNA can fold up and base pair to itself!  Some of its open-ended bases will bind to others, while other open bases will be left partnerless.  In this way, different sequences of RNA will fold up into different shapes and have different “sticky bases” available.  Some of these outward-facing “sticky bases” can perform other chemical reactions involving other free-floating molecules in the environment.  A folded-up RNA strand like this is called a **ribozyme**.  Usually, the reactions that randomly-generated ribozymes perform (catalyze) will be equally random and not helpful to the ribozyme itself.  However, eventually a ribozyme will form that is capable of streamlining the base-pairing process.  Now these ribozymes have an advantage compared to other RNA strands when it comes time to unfold and replicate: it will be able to more effectively make copies of itself using its own complementary strand.  In fact, this case is so special that this type of ribozyme has a special name: a **replicase**.  It works by grabbing free nucleotides and attaching them to an existing RNA strand, which is much faster and less error-prone than waiting around for the right base pairs to float by.
+Here’s where it becomes important that RNA is naturally just a single strand.  When there aren’t many free single nucleotides around, a strand of RNA can fold up and base pair to itself!  Some of its open-ended bases will bind to others, while other open bases will be left partnerless.  In this way, different sequences of RNA will fold up into different shapes and have different “sticky bases” available.  Some of these outward-facing “sticky bases” can perform chemical reactions involving other free-floating molecules in the environment.  A folded-up RNA strand like this is called a **ribozyme**.  Usually, the reactions that randomly-generated ribozymes perform or catalyze will be equally random and not helpful to the ribozyme itself.  However, given enough tries, eventually a ribozyme will form that is capable of streamlining the base-pairing process.  These ribozymes have an advantage compared to other RNA strands when it comes time to unfold and replicate: it will be able to more effectively make copies of itself using its own complementary strand.  In fact, this case is so special that this type of ribozyme has a special name: a **replicase**.  It works by grabbing free nucleotides and attaching them to an existing RNA strand, which is much faster and less error-prone than waiting around for the right base pairs to float by.
 
-However, other RNA strands can also benefit from this simply by being in the same area as this replicase.  It’s not picky; it will grab any free RNA strand and in the vicinity and create a complementary strand.  How can it get rid of the moochers, and make sure it only copies its own complementary strand?
+However, other RNA strands can also benefit from this simply by being in the same area as a replicase.  It’s not picky; it will grab any free RNA strand in the vicinity and create a complementary strand.  How can it get rid of the moochers, and make sure it only copies its own complementary strand?
 
 ### Membranes
-Meanwhile, another type of molecule that just spontaneously forms is called a **fatty acid**.  This is shaped sort of like a tadpole, with a polar “head” and a nonpolar “tail”.  Polar things attract each other and repel nonpolar things, and vice versa\*.  Water is polar, so when individual fatty acids are floating around in water, they tend to form little spheres called **micelles**, with all the heads facing outward and the tails facing inward.  If the micelle gets too big (by attracting more free fatty acids, which happens naturally over time) and there’s room for water in the center, a second layer of fatty acids forms with the heads facing inward.  This sphere that is formed with water on both the inside and on the outside is called a **vesicle**.  An important property of fatty acid membranes like this is that they are semipermeable, meaning that usually molecules on the inside can’t get out and molecules on the outside can’t get in, except sometimes under the right conditions, they can.\*\*
+Meanwhile, another type of molecule that just spontaneously forms is called a **fatty acid**.  This is shaped sort of like a tadpole, with a polar “head” and a nonpolar “tail”.  Polar things attract each other and repel nonpolar things, and vice versa\*.  Water is polar, so when individual fatty acids are floating around in water, they tend to form little spheres called **micelles**, with all the heads facing outward and the tails facing inward.  If the micelle gets too big (by attracting more free fatty acids, which happens naturally over time) and there’s room for water in the center, a second layer of fatty acids forms with the heads facing inward.  This sphere that is formed with water on both the inside and outside is called a **vesicle**.  An important property of fatty acid membranes like this is that they are semipermeable, meaning that usually molecules on the inside can’t get out and molecules on the outside can’t get in, except sometimes under the right conditions, they can.\*\*
 
-What if a nucleotide-creating ribozyme ends up inside a vesicle?  It will be able to keep the nucleotide-rich environment to itself, and replicate itself much more effectively!  ...Until it runs out of materials to make nucleotides out of.  This is why having a semipermeable membrane is important--it keeps the riffraff out (competitor RNA strands, being large, can’t fit through the membrane) but lets in the small raw materials needed to continue production.
+What if a nucleotide-creating ribozyme ends up inside a vesicle?  It will be able to keep the nucleotide-rich environment to itself, and replicate itself much more effectively!  ...Until it runs out of free nucleotides.  This is why having a semipermeable membrane is important--it keeps the riffraff out (competitor RNA strands, being large, can’t fit through the membrane) but lets in the small raw materials needed to continue production.
 
 \*This is how soap works--it’s a molecule in the shape of a long chain with a polar end and a nonpolar end.  Grease is nonpolar and water is polar, so without soap, water is ineffectual at rinsing off grease.  When you add soap, the polar end sticks to the water and the nonpolar end sticks to the grease, and then the whole water-soap-grease unit rinses off together.
 
@@ -39,13 +39,13 @@ Now all that’s left to do is divide the cell.  Luckily, this also happens spon
 
 As the vesicle gets bigger and bigger, by attracting more free fatty acids, it gets unstable, and starts to wobble and stretch like a figure-eight.  Eventually, it pinches off in the middle, forming two smaller vesicles, with a random amount of RNA on each side!  This proto-cell isn’t a very _good_ replicator, since it only produces approximate copies of itself, and relies entirely on random molecular collisions to function.  How can it further improve its functionality?
 
-There is one obvious way, involving additional types of ribozymes.  There could be a second type of ribozyme inside the cell that creates nucleotides out of their constituent chemicals, and a third that creates fatty acids. That way, the cell doesn’t have to wait around for fatty acids and nucleotides to spontaneously form outside of itself and then collide with it; instead, it can manufacture its own components out of the raw materials that are much more abundant.
+There could be a second type of ribozyme inside the cell that creates nucleotides out of their constituent chemicals, and a third that creates fatty acids. That way, the cell doesn’t have to wait around for fatty acids and nucleotides to spontaneously form outside of itself and then collide with it; instead, it can manufacture its own components out of the raw materials that are much more abundant.
 
 From there, the complexity ceiling is basically infinite--as you’ve probably noticed, being a complex organism made of cells yourself.
 
 ### Mutations
 There’s one last detail to address before we can confirm that this proto-cell is in fact alive.  Natural selection requires variation to work--if a replicating proto-cell can only produce exact copies of itself, it can’t ever improve, which means it can’t evolve.  How could this proto-cell give rise to all the complex forms of life that we know today?
 
-Luckily, RNA replication is not an error-free process.  Sometimes, an A will slip in where there was once a G, changing how the resulting strand folds, and thus changing its functionality.  As with all mutations, this is usually neutral, and often bad, but occasionally a mutation that has a beneficial effect will occur--for example, a ribozyme that is more efficient at creating nucleotides.  Then, the proto-cell armed with this new ribozyme will out-compete the other proto-cells for resources and will replicate itself more often.  That’s natural selection!  This spontaneously-formed proto-cell is a living thing!
+Luckily, RNA replication is not an error-free process.  Sometimes, an A will slip in where there was once a G, changing how the resulting strand folds, and thus changing its functionality.  As with all mutations, this is usually neutral, and often bad, but occasionally a mutation that has a beneficial effect will occur--for example, a ribozyme that is more efficient at its job.  Then, the proto-cell armed with this new ribozyme will out-compete the other proto-cells for resources and will replicate itself more often.  That’s natural selection!  This spontaneously-formed proto-cell is a living thing!
 
 [Page image source](https://i.pinimg.com/originals/f6/d0/9e/f6d09e92b8cda44d769d3e1c2cc64093.jpg)
